# rules_multirun_go

./: MODULE.bazel
internal/: BUILD  multirun.go
